# version

./: .auto-changelog  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  VERSION.toml  rust-toolchain.toml  version.back  version.rb
.cargo/: config.toml
.github/workflows/: dist.yml
src/: main.rs
ver/: Cargo.toml
ver/src/: files.rs  main.rs
ver/src/cli/: command.rs
ver/src/cli/getset/: build.rs  rm.rs
version/: Cargo.toml
version-manager/: CHANGELOG.md  Cargo.toml  README.md  VERSION.toml
version-manager/src/: files.rs  lib.rs  main.rs  run.rs  version.rs
version-manager/src/cli/: command.rs  files.rs  mod.rs  package.rs  version.rs
version-manager/src/cli/getset/: build.rs  mod.rs  rm.rs  set.rs  ver.rs
version-manager/tests/: cli_tests.rs
version-manager/tests/cmd/: alpha.trycmd  beta.trycmd  build.trycmd  help.stdout  help.toml  major.trycmd  minor.trycmd  package.trycmd  patch.trycmd  rc.trycmd
version/src/: lib.rs  main.rs  version.rs
version/src/cli/: command.rs  files.rs  mod.rs  version.rs
xtask/: Cargo.toml
xtask/src/: cmd.rs  dist.rs  error.rs  main.rs  targets.rs
