[workspace]
members = ["version-manager", "xtask"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
clio = { version = "0.3", features = ["clap", "clap-parse"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
