[package]
name = "version-manager"
version = "1.2.0"
edition = "2021"
description = "A simple version manager for your projects."
license = "GPL-3.0-or-later"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
readme = "./README.md"
repository = "https://github.com/annie444/version"
keywords = ["version", "manager", "cli", "rust"]
categories = [
  "command-line-utilities",
  "config",
  "development-tools",
  "development-tools::build-utils",
]
default-run = "version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
clap_complete = "4.5.1"
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
assert_fs = { version = "1.1.1", features = ["color", "color-auto"] }
trycmd = "0.15.1"

[package.metadata.deb]
name = "version"
maintainer = "Annie Ehler <annie.ehler.4@gmail.com>"
copyright = "2024 Annie Ehler <annie.ehler.4@gmail.com>"
changelog = "CHANGELOG.md"
section = "vcs"
priority = "optional"
depends = [""]
assets = [
  [
    "../target/dist/version",
    "/usr/bin/",
    "755",
  ],
  [
    "../target/dist/manpages/version.1",
    "/usr/share/man/man1/version.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-get.1",
    "/usr/share/man/man1/version-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc.1",
    "/usr/share/man/man1/version-rc.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc-set.1",
    "/usr/share/man/man1/version-rc-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc-set--.1",
    "/usr/share/man/man1/version-rc-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc-set-+.1",
    "/usr/share/man/man1/version-rc-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc-rm.1",
    "/usr/share/man/man1/version-rc-rm.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-rc-get.1",
    "/usr/share/man/man1/version-rc-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-set-+.1",
    "/usr/share/man/man1/version-beta-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta.1",
    "/usr/share/man/man1/version-beta.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-set.1",
    "/usr/share/man/man1/version-beta-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-set--.1",
    "/usr/share/man/man1/version-beta-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-set-+.1",
    "/usr/share/man/man1/version-beta-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-rm.1",
    "/usr/share/man/man1/version-beta-rm.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-get.1",
    "/usr/share/man/man1/version-beta-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-beta-set-+.1",
    "/usr/share/man/man1/version-beta-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha.1",
    "/usr/share/man/man1/version-alpha.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-set.1",
    "/usr/share/man/man1/version-alpha-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-set--.1",
    "/usr/share/man/man1/version-alpha-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-set-+.1",
    "/usr/share/man/man1/version-alpha-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-rm.1",
    "/usr/share/man/man1/version-alpha-rm.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-get.1",
    "/usr/share/man/man1/version-alpha-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-alpha-set-+.1",
    "/usr/share/man/man1/version-alpha-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch.1",
    "/usr/share/man/man1/version-patch.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-set.1",
    "/usr/share/man/man1/version-patch-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-set--.1",
    "/usr/share/man/man1/version-patch-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-set-+.1",
    "/usr/share/man/man1/version-patch-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-reset.1",
    "/usr/share/man/man1/version-patch-reset.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-get.1",
    "/usr/share/man/man1/version-patch-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-patch-set-+.1",
    "/usr/share/man/man1/version-patch-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor.1",
    "/usr/share/man/man1/version-minor.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-set.1",
    "/usr/share/man/man1/version-minor-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-set--.1",
    "/usr/share/man/man1/version-minor-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-set-+.1",
    "/usr/share/man/man1/version-minor-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-reset.1",
    "/usr/share/man/man1/version-minor-reset.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-get.1",
    "/usr/share/man/man1/version-minor-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-minor-set-+.1",
    "/usr/share/man/man1/version-minor-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major.1",
    "/usr/share/man/man1/version-major.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-set.1",
    "/usr/share/man/man1/version-major-set.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-set--.1",
    "/usr/share/man/man1/version-major-set--.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-set-+.1",
    "/usr/share/man/man1/version-major-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-reset.1",
    "/usr/share/man/man1/version-major-reset.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-get.1",
    "/usr/share/man/man1/version-major-get.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-major-set-+.1",
    "/usr/share/man/man1/version-major-set-+.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-file.1",
    "/usr/share/man/man1/version-file.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-file-update.1",
    "/usr/share/man/man1/version-file-update.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-file-update-all.1",
    "/usr/share/man/man1/version-file-update-all.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-file-rm.1",
    "/usr/share/man/man1/version-file-rm.1",
    "644",
  ],
  [
    "../target/dist/manpages/version-file-track.1",
    "/usr/share/man/man1/version-file-track.1",
    "644",
  ],
  [
    "../target/dist/doc/README",
    "/usr/share/doc/version/README",
    "644",
  ],
  [
    "../target/dist/doc/CHANGELOG",
    "/usr/share/doc/version/CHANGELOG",
    "644",
  ],
  [
    "../target/dist/doc/LICENSE",
    "/usr/share/doc/version/LICENSE",
    "644",
  ],
]
