[package]
name = "version-manager"
version = "3.0.0"
edition = "2024"
description = "A simple version manager for your projects."
license = "GPL-3.0-or-later"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
readme = "./README.md"
repository = "https://github.com/annie444/version"
keywords = ["version", "manager", "cli", "rust"]
categories = [
  "command-line-utilities",
  "config",
  "development-tools",
  "development-tools::build-utils",
]
default-run = "version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap.workspace = true
clap_complete.workspace = true
clio.workspace = true
regex.workspace = true
semver = { version = "1.0.26", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.140"
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_fs = { version = "1.1.1", features = ["color", "color-auto"] }
trycmd = "0.15.1"

[package.metadata.deb]
name = "version"
maintainer = "Annie Ehler <annie.ehler.4@gmail.com>"
copyright = "2024 Annie Ehler <annie.ehler.4@gmail.com>"
changelog = "CHANGELOG.md"
section = "vcs"
priority = "optional"
depends = [""]
assets = [
  [
    "../target/dist/version",
    "/usr/bin/",
    "755",
  ],
  [
    "../target/dist/manpages/*",
    "/usr/share/man/man1/",
    "644",
  ],
  [
    "../target/dist/doc/*",
    "/usr/share/doc/version/",
    "644",
  ],
]

[package.metadata.generate-rpm]
name = "version"
url = "https://github.com/annie444/version.git"

[[package.metadata.generate-rpm.assets]]
source = "../target/dist/version"
dest = "/usr/bin/"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "../target/dist/manpages/*"
dest = "/usr/share/man/man1/"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "../target/dist/doc/*"
dest = "/usr/share/doc/version/"
mode = "644"
