[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
clap-markdown = "0.1.3"
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
regex = "1.10.4"
