[package]
name = "xtask"
version = "3.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-manager = { path = "../version-manager" }
clap.workspace = true
clap_complete.workspace = true
clio.workspace = true
regex.workspace = true
serde.workspace = true
toml.workspace = true
clap_mangen = "0.2"
clap-markdown = "0.1"
fs_extra = "1"
